fixed overflow

--- a/src/css/support-ukraine.css
+++ b/src/css/support-ukraine.css
@@ -44,7 +44,7 @@
 }
 
 .donate-overflow {
-  width: 170px;
+  width: 280px;
   height: 292px;
   overflow: auto;
   scroll-behavior: smooth;
